crates/courier-ftp-proto/tests/snapshots/golden__login_finish_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "login_state_id": "01900000-0000-7000-8000-000000000003",
  "credential_finalization": "AwMDAwM",
  "totp": "123456",
  "device": {
    "name": "desktop",
    "platform": "windows"
  },
  "purpose": "login"
}
