crates/courier-ftp-proto/tests/snapshots/golden__login_start_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "email": "ada@example.test",
  "credential_request": "AQEBAQE"
}
