crates/courier-ftp-proto/tests/snapshots/golden__login_start_response.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "credential_response": "AgICAgI",
  "login_state_id": "01900000-0000-7000-8000-000000000003"
}
