crates/courier-ftp-proto/tests/snapshots/golden__org_views.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
[
  {
    "id": "01900000-0000-7000-8000-000000000007",
    "name": "Acme Ops",
    "role": "owner",
    "created_at": "2026-10-10T12:00:00Z"
  }
]
