crates/courier-ftp-proto/tests/snapshots/golden__password_change_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "reauth_token": "reauth",
  "registration_upload": "BQY",
  "private_bundle_enc": "Bwg",
  "version": 3
}
