crates/courier-ftp-proto/tests/snapshots/golden__password_start_request.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "registration_request": "AQI"
}
