crates/courier-ftp-proto/tests/snapshots/golden__password_start_response.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "registration_response": "AwQ"
}
