crates/courier-ftp-proto/tests/snapshots/golden__pull_query.snap
---
source: crates/courier-ftp-proto/tests/golden.rs
expression: json
---
{
  "since": 40,
  "limit": 100
}
